--- a/MajstorHUB-Back/MajstorHUB/appsettings.json
+++ b/MajstorHUB-Back/MajstorHUB/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "MajstorHUBDatabase": {
-    "ConnectionString": "mongodb+srv://aleksa:password@majstorhub.apvzchg.mongodb.net/?retryWrites=true&w=majority&appName=MajstorHUB",
+  "MajstorHUBDatabaseSettings": {
+    "ConnectionString": "mongodb+srv://aleksa:5m3rMFz5arLcLoO5@majstorhub.apvzchg.mongodb.net/?retryWrites=true&w=majority&appName=MajstorHUB",
     "DatabaseName": "MajstorHUB",
     "KorisniciCollectionName": "Korisnici",
     //Firme nisu jos dodate bice bajo!!!
