Popravljena update funkcija za Firmu. Dodati Service i Controller za Majstore, ali ne radi iz nekog razloga proveriti zašto

--- a/MajstorHUB-Back/MajstorHUB/appsettings.json
+++ b/MajstorHUB-Back/MajstorHUB/appsettings.json
@@ -4,7 +4,8 @@
     "DatabaseName": "MajstorHUB",
     "KorisniciCollectionName": "Korisnici",
     //Firme nisu jos dodate bice bajo!!!
-    "FirmeCollectionName": "Firme"
+    "FirmeCollectionName": "Firme",
+    "MajstorCollectionName": "Majstori"
     //Po mojoj pretpostavci ovo su nam tabele!!!
   },
   "Logging": {
