Popravljena funkcionalnost za Majstora

--- a/MajstorHUB-Back/MajstorHUB/appsettings.json
+++ b/MajstorHUB-Back/MajstorHUB/appsettings.json
@@ -3,10 +3,8 @@
     "ConnectionString": "mongodb+srv://aleksa:5m3rMFz5arLcLoO5@majstorhub.apvzchg.mongodb.net/?retryWrites=true&w=majority&appName=MajstorHUB",
     "DatabaseName": "MajstorHUB",
     "KorisniciCollectionName": "Korisnici",
-    //Firme nisu jos dodate bice bajo!!!
     "FirmeCollectionName": "Firme",
-    "MajstorCollectionName": "Majstori"
-    //Po mojoj pretpostavci ovo su nam tabele!!!
+    "MajstoriCollectionName": "Majstori"
   },
   "Logging": {
     "LogLevel": {
