Dodata sifra za svakog user-a, i pri dodavanja u bazu se sifra hesira, dodate i login koje ce kasnije da generise token za sesiju

--- a/MajstorHUB-Back/MajstorHUB/appsettings.json
+++ b/MajstorHUB-Back/MajstorHUB/appsettings.json
@@ -4,7 +4,8 @@
     "DatabaseName": "MajstorHUB",
     "KorisniciCollectionName": "Korisnici",
     "FirmeCollectionName": "Firme",
-    "MajstoriCollectionName": "Majstori"
+    "MajstoriCollectionName": "Majstori",
+    "SifreCollectionName": "Sifre"
   },
   "Logging": {
     "LogLevel": {
