--- a/MajstorHUB-Back/MajstorHUB/MajstorHUB.csproj
+++ b/MajstorHUB-Back/MajstorHUB/MajstorHUB.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
