Dodata funkcionalnost za JWT
Dodata osnovna funckionalnost za JWT proveriti sve opet i promeniti ključ na 128 bita.

--- a/MajstorHUB-Back/MajstorHUB/appsettings.json
+++ b/MajstorHUB-Back/MajstorHUB/appsettings.json
@@ -13,5 +13,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "Korisnici",
+    "Audience": "Korisnici",
+    "Key": "opremopremoprem123"
+  },
   "AllowedHosts": "*"
 }
