Dodat JWT za Korisnika
Promenjen naziv fajla iz Utility u UtilityCheck.
Dodato generisanje JWT i osposobljeno generisanje preko Korisnika.

--- a/MajstorHUB-Back/MajstorHUB/MajstorHUB.csproj
+++ b/MajstorHUB-Back/MajstorHUB/MajstorHUB.csproj
@@ -7,14 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
-    <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <Compile Remove="TestZaLogin\**" />
+    <Content Remove="TestZaLogin\**" />
+    <EmbeddedResource Remove="TestZaLogin\**" />
+    <None Remove="TestZaLogin\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="TestZaLogin\" />
-    <Folder Include="Utility\" />
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
+    <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
