Dodata funkcionalnost za ogalse
Dodate sve osnovne CRUD operacije za oglase.
Ispravljena greška kod svih kontrolera za GetAll, proverava se broj elemenata a ne da je vraćeni element null.

--- a/MajstorHUB-Back/MajstorHUB/appsettings.json
+++ b/MajstorHUB-Back/MajstorHUB/appsettings.json
@@ -5,7 +5,8 @@
     "KorisniciCollectionName": "Korisnici",
     "FirmeCollectionName": "Firme",
     "MajstoriCollectionName": "Majstori",
-    "SifreCollectionName": "Sifre"
+    "SifreCollectionName": "Sifre",
+    "OglasiCollectionName": "Oglasi"
   },
   "Logging": {
     "LogLevel": {
