Dodata Recenzija i mini fixevi
Dodat Model, Service i Controller za Recenziju potrebno je da se srede Add i Put metode.
Promenjeno svuda u IActionResult.
Fixevi vezani za recenzije.

--- a/MajstorHUB-Back/MajstorHUB/appsettings.json
+++ b/MajstorHUB-Back/MajstorHUB/appsettings.json
@@ -6,7 +6,8 @@
     "FirmeCollectionName": "Firme",
     "MajstoriCollectionName": "Majstori",
     "SifreCollectionName": "Sifre",
-    "OglasiCollectionName": "Oglasi"
+    "OglasiCollectionName": "Oglasi",
+    "RecenzijeCollectionName":  "Recenzije"
   },
   "Logging": {
     "LogLevel": {
