--- a/MajstorHUB-Front/package.json
+++ b/MajstorHUB-Front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
