--- a/MajstorHUB-Front/package.json
+++ b/MajstorHUB-Front/package.json
@@ -15,6 +15,7 @@
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3"
