--- a/MajstorHUB-Front/package.json
+++ b/MajstorHUB-Front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.6.8",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
@@ -18,6 +19,7 @@
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
