--- a/MajstorHUB-Front/package.json
+++ b/MajstorHUB-Front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.6.8",
     "primeicons": "^7.0.0",
@@ -32,6 +33,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "sas": "^3.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
