Dodavanje oglasa komplet gotovo na frontu

--- a/MajstorHUB-Back/MajstorHUB/appsettings.json
+++ b/MajstorHUB-Back/MajstorHUB/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MajstorHUBDatabaseSettings": {
-    "ConnectionString": "mongodb+srv://aleksa:5m3rMFz5arLcLoO5@majstorhub.apvzchg.mongodb.net/?retryWrites=true&w=majority&appName=MajstorHUB",
+    "ConnectionString": "mongodb+srv://aleksa:OxFKu0yEWfoetZyY@majstorhub.apvzchg.mongodb.net/?retryWrites=true&w=majority&appName=MajstorHUB",
     "DatabaseName": "MajstorHUB",
     "KorisniciCollectionName": "Korisnici",
     "FirmeCollectionName": "Firme",
