--- a/MajstorHUB-Front/package.json
+++ b/MajstorHUB-Front/package.json
@@ -15,11 +15,13 @@
     "axios": "^1.6.8",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-lottie": "^1.2.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3"
   },
@@ -27,6 +29,7 @@
     "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-lottie": "^1.2.10",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
