Dodate osnovne funkcionalnosti za prijavu na oglas

--- a/MajstorHUB-Back/MajstorHUB/appsettings.json
+++ b/MajstorHUB-Back/MajstorHUB/appsettings.json
@@ -8,7 +8,8 @@
     "SifreCollectionName": "Sifre",
     "OglasiCollectionName": "Oglasi",
     "RecenzijeCollectionName": "Recenzije",
-    "PosaoCollectionName": "Poslovi"
+    "PosloviCollectionName": "Poslovi",
+    "PrijaveCollectionName": "Prijave"
   },
   "Logging": {
     "LogLevel": {
