Završena funkcionalnost za Report user-a

--- a/MajstorHUB-Back/MajstorHUB/appsettings.json
+++ b/MajstorHUB-Back/MajstorHUB/appsettings.json
@@ -9,7 +9,8 @@
     "OglasiCollectionName": "Oglasi",
     "RecenzijeCollectionName": "Recenzije",
     "PosloviCollectionName": "Poslovi",
-    "PrijaveCollectionName": "Prijave"
+    "PrijaveCollectionName": "Prijave",
+    "ReportCollectionName":  "Reports"
   },
   "Logging": {
     "LogLevel": {
