--- a/MajstorHUB-Front/package.json
+++ b/MajstorHUB-Front/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
     "@react-spring/web": "^9.7.3",
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.6.8",
@@ -22,6 +25,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-lottie": "^1.2.4",
+    "react-multi-carousel": "^2.8.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3"
   },
